# brain-f

./: .gitignore  README.md  brain-f.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Lib.hs  Parsing.hs
